On the way to fixing z-index footer issue

--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,8 @@ hr {
 	margin-bottom: .5em;
 }
 
-section#resources {
+section#resources, section#article {
 	margin-bottom: 220px;
-}
-section#article {
-	margin-bottom: 250px;
 }
 
 .section#safari-hack {
@@ -166,6 +163,10 @@ section#article {
   width: 100%;
   height: 250px;
   background-color: #f5f5f5;
+}
+
+section#article, .header, header, section#main, section#trias, section#resources {
+	z-index: 50;
 }
 
 /*
@@ -749,7 +750,7 @@ h1.guide {
   z-index: 1;
   width: 80%;
   min-width: 700px;
-  height: 48px;
+  height: 58px;
   margin: auto;
 }
 
@@ -790,10 +791,6 @@ p.microcopy {
 .image-2 {
   width: 900px;
   margin-left: -100px;
-}
-
-#footer-cta {
-	 z-index: -1;
 }
 
 @media(max-width: 900px) {
